fixing picture alignment for mobile view.

--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ body {
   font-weight: 500;
   font-variant: small-caps;
   text-decoration: none;
+  text-align: center;
   background-color: #FFE6CC;
-  width: 500px;
+  width: 70%;
   padding: 15px;
   border: 5px solid black;
 }
